--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediMap - ওষুধ খুঁজুন সহজেই</title>
+    <link rel="icon" type="image/x-icon" href="assets/fabdicon.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalpurush&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -18,8 +19,7 @@
         <div class="container">
             <nav class="nav">
                 <div class="logo">
-                    <div class="logo-placeholder"><img src="assets/logo.png" alt=""></div>
-                    <h1>MediMap</h1>
+                    <div class="logo-placeholder"><img src="assets/main-logo.png" alt=""></div>
                 </div>
                 <div class="nav-buttons">
                     <a href="#" class="btn btn-secondary" id="languageToggle" onclick="toggleLanguage()">
