--- a/search-results.html
+++ b/search-results.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container">
         <nav class="nav">
-          <a href="/index.html" class="logo">
+          <a href="index.html" class="logo">
             <img src="assets/main-logo.png" alt="main logo" />
           </a>
           <a href="index.html" class="back-btn">
