Your commit message here

--- a/search-results.html
+++ b/search-results.html
@@ -125,9 +125,9 @@
             </div>
           </div>
 
-          <button class="btn bbaa btn-primary" onclick="MapsManager.getCurrentLocation()">
-            <i class="fas fa-crosshairs"></i>
-            আমার অবস্থান খুঁজুন
+          <button class="btn bbaa btn-primary" onclick="getCurrentLocation()">
+              <i class="fas fa-crosshairs"></i>
+              আমার অবস্থান খুঁজুন
           </button>
         </div>
       </div>
